# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

if (is_android) {
  import("//build/config/android/rules.gni")
}

static_library("braveLedger") {
  sources = [
    "src/ledger.cc",
    "src/bat_client.cc",
    "src/bat_client_webrequest.cc",
    "src/bat_helper.cc",
    "src/bat_publisher.cc",
    "src/bat_balance.cc",
    "src/tweetnacl.cc",
  ]

  include_dirs = [
    "src",
  ]

  if (is_mac) {
    include_dirs += [ "anon/macos_include" ]
  }

  include_dirs += [
    "../bat-native-anonize/anon",
    "../bat-native-anonize/relic/include",
    "../bat-native-anonize/relic/include/low",
  ]

  deps = [
    "//base",
    "//net",
    "//third_party/leveldatabase",
    "//content/public/browser",
    "../bat-native-anonize:anonize2",
  ]

  defines = [ "LEDGER_LIBRARY" ]
}
