# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/features.gni")

static_library("braveLedger") {
  sources = [
    "src/ledger.cc",
    "src/bat_client.cc",
    "src/bat_client_webrequest_chromium.cc",
    "src/bat_get_media.cc",
    "src/bat_helper.cc",
    "src/bat_publishers.cc",
    "src/bat_balance.cc",
  ]

  include_dirs = [
    "src",
    "//brave/anonize2/anon",
    "//brave/anonize2/relic/include",
    "//brave/anonize2/relic/include/low",
    "//brave/bip39wally-core/include",
    "//brave/bat-native-tweetnacl",
  ]

  deps = [
    "//base",
    "//net",
    "//brave/anonize2", 
    "//brave/bat-native-tweetnacl:tweetnacl", 
    "//v8",
    "//net:net_utility_services",
    "//net:net_with_v8",
    "//v8:v8_libplatform",
  ]

  include_dirs += [
    "//base",
    "//net/url_request",
    "//url",
    "//content/public/browser",
    "//third_party/leveldatabase/src/include",
    "//v8",
    "//brave/bat-native-rapidjson/include",
  ]

  defines = [ "BRAVE_LEDGER_LIB" ]

}
